--- a/nregress/ok/generics.recurse2.2
+++ b/nregress/ok/generics.recurse2.2
@@ -1,3 +1,2 @@
-In file included from test.nc:3:
-In component `TemInst':
-TemInst.nc:5: Attempt to instantiate a generic component within itself
+In component `test.TemInst.TemInst':
+TemInst.nc(test.TemInst):5: component instantiation loop `TemInst.TemInst'
