--- a/nregress/ok/generics2.ltest.nc.2
+++ b/nregress/ok/generics2.ltest.nc.2
@@ -1,4 +1,2 @@
-In file included from loop.nc:3,
-                 from ltest.nc:3:
-In component `loop2':
-loop2.nc:3: Attempt to instantiate a generic component within itself
+In component `ltest.fun.l.ll':
+loop2.nc(ltest.fun.l):3: component instantiation loop `loop.l.ll'
