--- a/doc/nescc-ncg.1
+++ b/doc/nescc-ncg.1
@@ -31,8 +31,8 @@ the specified constant will be extracted, in the latter case all constants
 from the specified C file will be extracted. Only constants declared in C
 files will be found by \fBnescc-ncg\fR.
 
-The current tools are \fBjava\fR and \fBpython\fR, which
-generate java and python classes that contain the values of the 
+The current tools are \fBjava\fR, \fBpython\fR and \fBC\fR, which
+generate java, python and C code that contains the values of the 
 requested constants. 
 .SH OPTIONS
 You can pass any \fBnescc\fR option, as well as
