--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is version 1.2.4 of the nesC compiler.
+This is version 1.2.5 of the nesC compiler.
 
 Installation instructions are in INSTALL. Note that nesC needs patched
 versions of the GNU assemblers for the avr and msp430 architectures. For
@@ -14,6 +14,8 @@ Changes in nesC 1.2.5
   interface arguments (e.g., interface Timer<TMilli>, where TMilli is 
   defined in Timer.nc)
 - updates to automatic inlining - code should be slightly smaller
+- @spontaneous() attribute is automatically added to the __nesc_XXX 
+  functions used by the compiler
 - atomic optimisation (experimental): if you specify -fnesc-optimize-atomic,
   two optimisations are performed:
   o outermost atomics call __nesc_disable/enable_interrupt, which can assume
