--- a/README
+++ b/README
@@ -4,6 +4,12 @@ Installation instructions are in INSTALL. Note that nesC needs patched
 versions of the GNU assemblers for the avr and msp430 architectures. For
 more information, check the INSTALL file.
 
+Changes in nesC 1.2.7
+=====================
+- gcc's mode attribute support (this requires a new word_size specification
+  in the env target)
+- bug fixes
+
 Changes in nesC 1.2.6
 =====================
 - external types now support bitfields (big-endian only - mixing bit-field
