--- a/nregress/ok/error-messages.kind2.2
+++ b/nregress/ok/error-messages.kind2.2
@@ -1,2 +1,2 @@
 In component `test':
-test.nc:2: expected interface `TimerC', but got a component
+TimerC.nc:1: expected interface `TimerC', but got component 'TimerC'
