--- a/nregress/ok/generics.recurse1.2
+++ b/nregress/ok/generics.recurse1.2
@@ -1,2 +1,7 @@
+In file included from test.nc:3:
+In component `TemInst':
+TemInst.nc:5: component TemOOPS not found
+TemInst.nc:5: component `TemOOPS' is not generic
+TemInst.nc:6: cannot find `Tem'
 In component `test':
-TemInst.nc:1: expected component `TemInst', but got component 'TemOOPS'
+TemInst.nc:1: warning: expected component `TemInst', but got component 'TemOOPS'
