--- a/nregress/ok/error-messages.kind1.2
+++ b/nregress/ok/error-messages.kind1.2
@@ -1,2 +1,2 @@
 In component `test':
-test.nc:3: expected component `StdControl', but got an interface
+StdControl.nc:7: expected component `StdControl', but got interface 'StdControl'
