--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 This is version 1.2.8 of the nesC compiler.
 
-Installation instructions are in INSTALL. Note that nesC needs patched
-versions of the GNU assemblers for the avr and msp430 architectures. For
-more information, check the INSTALL file.
+Installation instructions are in INSTALL. 
 
 Changes in nesC 1.2.8
 =====================
