Some configurable support for C extensions used by the Keil/SDCC/IAR C compilers: rewrites extensions into gcc-style attributes. See machine/sdcc.c and machine/keil.c for examples of use.
May need further extension.

Currently, extensions aren't "unparsed", i.e., just come out as gcc
attributes. This could be changed, but has the advantage that the
output can be fed through other tools that don't know about these
extensions (e.g., CIL-based tools).

--- a/README
+++ b/README
@@ -1,6 +1,10 @@
-This is version 1.2.8a of the nesC compiler.
+This is version 1.2.X of the nesC compiler.
 
 Installation instructions are in INSTALL. 
+
+Changes in nesC 1.2.9
+=====================
+- fix -fnesc-separator
 
 Changes in nesC 1.2.8a
 ======================
